dysnix/nifi-registry/tests/01-oidc-test-framework/browserless-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: browserless
  labels:
    app.kubernetes.io/name: browserless
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: browserless
  serviceName: browserless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: browserless
    spec:
      containers:
        - name: browserless
          image: browserless/chrome
          ports:
            - name: tcp-browserless
              containerPort: 3000
          env:
          - name: CONNECTION_TIMEOUT
            value: "-1"
 #       - name: netshoot
 #         command: [ 'tail', '-f', '/dev/null' ]
 #         image: docker.io/nicolaka/netshoot:latest
 #         imagePullPolicy: "Always"
